@@ -17,8 +17,9 @@
                                                                         (char->integer #\0)))))
                                                  (string->list (number->string var-idx)))))))))
 
-(define-public (ly:parse-string-result str parser)
+(define-public (parse-string-result str parser)
   "Parse `str', which is supposed to contain a music expression."
+
   (ly:parser-parse-string
    parser
    (format #f "parseStringResult = \\notemode { ~a }" str))
@@ -81,6 +82,6 @@ character."
          ,@(map (lambda (binding)
                   `(ly:parser-define! parser-clone ',(car binding) ,(cdr binding)))
                 (reverse bindings))
-         (ly:parse-string-result ,lily-string parser-clone)))))
+         (parse-string-result ,lily-string parser-clone)))))
 
 (read-hash-extend #\{ read-lily-expression)
